Fixed dynamic menu item animation.
Javascript fix applied for menu animations and landing.css truncated.

--- a/css/style.css
+++ b/css/style.css
@@ -579,54 +579,3 @@ table.info tr:nth-child(even) {
 .loader > div:nth-child(15) {
     animation-delay: 1.4s;
 }
-.menu {
-    text-align: center;
-    position: absolute;
-    margin-top: 1em;
-    margin-left:auto;
-    margin-right:auto;
-    width:100%;
-}
-.menu > .row .loader{
-    width: 14em;
-    height: 8em;
-}
-.menu > .row > .col{
-    padding: 0 0 5%;
-    background-color:white;
-    margin: 0.25em 0.25em 0.25em 2em;
-    border-radius: 0.5em;
-    transition: all 500ms;
-    box-shadow: 0 0 10px 5px rgb(33, 104, 173);
-    max-width: 30vw;
-    max-height:70%;
-    height:70%;
-}
-.menu > .row > .col > div > p{
-    margin-top: 9em;
-}
-.test{
-    transition: all 1000ms;
-    background-color:white;
-}
-.menu img{
-    display:block;
-    width: 14em;
-    height: 8em;
-    margin: 5em auto 4em;
-}
-.menu span{
-    font-size: 2em;
-}
-.menu > .row > .col:hover{
-    cursor:pointer;
-    transform: scale(1.05);
-    box-shadow: 0 0 10px 5px rgb(55, 155, 255);
-}
-.menu > .row > .col > div > p{
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-
-}
